--- a/index.html
+++ b/index.html
@@ -10,10 +10,13 @@
 
     <link rel="stylesheet" href="./css/style.css">
 
-    <title>Microhard Official Homepage</title>
+    <title>Microsoft Official Homepage</title>
 </head>
 
 <body>
+    <div class="menu-btn">
+        <i class="fas fa-bars fa-2x"></i>
+    </div>
     <header class="header">
         <div class="container">
             <nav class="header-nav">
@@ -187,62 +190,65 @@
         </section>
 
         <section class="section-links">
+           <div class="container">
             <nav class="footer-nav">
-              <ul class="footer-list">
-                <li><h3>What's New</h3></li>
-                <li class="footer-item"><a href="#" class="footer-link">Surface Pro X</a></li>
-                <li class="footer-item"><a href="#" class="footer-link">Surface Laptop 3</a></li>
-                <li class="footer-item"><a href="#" class="footer-link">Surface Pro 7</a></li>
-                <li class="footer-item"><a href="#" class="footer-link">Windows 10 apps</a></li>
-                <li class="footer-item"><a href="#" class="footer-link">Office apps</a></li>
-              </ul>
-              <ul class="footer-list">
-                <li><h3>Microsoft Store</h3></li>
-                <li class="footer-item"><a href="#" class="footer-link">Account Profile</a></li>
-                <li class="footer-item"><a href="#" class="footer-link">Download Center</a></li>
-                <li class="footer-item"><a href="#" class="footer-link">Microsoft Store support</a></li>
-                <li class="footer-item"><a href="#"  class="footer-link">Returns</a></li>
-                <li class="footer-item"><a href="#" class="footer-link">Older tracking</a></li>
-              </ul>
-              <ul class="footer-list">
-                <li><h3>Education</h3></li>
-                <li class="footer-item"><a href="#" class="footer-link">Microsfot in education</a></li>
-                <li class="footer-item"><a href="#" class="footer-link">Office for students</a></li>
-                <li class="footer-item"><a href="#" class="footer-link">Office 365 for schools</a></li>
-                <li class="footer-item"><a href="#" class="footer-link">Deals for studentss</a></li>
-                <li class="footer-item" ><a href="#" class="footer-link">Microsfot Azure</a></li>
-              </ul>
-              <ul class="footer-list">
-                <li><h3>Enterprise</h3></li>
-                <li class="footer-item"><a href="#" class="footer-link">Azure</a></li>
-                <li class="footer-item"><a href="#" class="footer-link">AppSource</a></li>
-                <li class="footer-item"><a href="#" class="footer-link">Automotive</a></li>
-                <li class="footer-item"><a href="#" class="footer-link">Government</a></li>
-                <li  class="footer-item"><a href="#" class="footer-link">Healthcare</a></li>
-              </ul>
-              <ul class="footer-list">
-                <li><h3>Developer</h3></li>
-                <li class="footer-item"><a href="#" class="footer-link">Visual Studio</a></li>
-                <li class="footer-item"><a href="#" class="footer-link">Windows Dev Center</a></li>
-                <li class="footer-item"><a href="#" class="footer-link">Developer Network</a></li>
-                <li class="footer-item"><a href="#"  class="footer-link">TechNet</a></li>
-                <li class="footer-item"><a href="#" class="footer-link">Microsoft Developer</a></li>
-              </ul>
-              <ul class="footer-list">
-                <li><h3>Company</h3></li>
-                <li class="footer-item"><a href="#" class="footer-link">Careers</a></li>
-                <li class="footer-item"><a href="#" class="footer-link">About Microsoft</a></li>
-                <li class="footer-item"><a href="#" class="footer-link">Company news</a></li>
-                <li class="footer-item"><a href="#" class="footer-link">Privacy at Microsoft</a></li>
-                <li class="footer-item"><a href="#" class="footer-link">Inverstors</a></li>
-              </ul>
-            </div>
+                <ul class="footer-list">
+                  <li><h3>What's New</h3></li>
+                  <li class="footer-item"><a href="#" class="footer-link">Surface Pro X</a></li>
+                  <li class="footer-item"><a href="#" class="footer-link">Surface Laptop 3</a></li>
+                  <li class="footer-item"><a href="#" class="footer-link">Surface Pro 7</a></li>
+                  <li class="footer-item"><a href="#" class="footer-link">Windows 10 apps</a></li>
+                  <li class="footer-item"><a href="#" class="footer-link">Office apps</a></li>
+                </ul>
+                <ul class="footer-list">
+                  <li><h3>Microsoft Store</h3></li>
+                  <li class="footer-item"><a href="#" class="footer-link">Account Profile</a></li>
+                  <li class="footer-item"><a href="#" class="footer-link">Download Center</a></li>
+                  <li class="footer-item"><a href="#" class="footer-link">Microsoft Store support</a></li>
+                  <li class="footer-item"><a href="#"  class="footer-link">Returns</a></li>
+                  <li class="footer-item"><a href="#" class="footer-link">Older tracking</a></li>
+                </ul>
+                <ul class="footer-list">
+                  <li><h3>Education</h3></li>
+                  <li class="footer-item"><a href="#" class="footer-link">Microsfot in education</a></li>
+                  <li class="footer-item"><a href="#" class="footer-link">Office for students</a></li>
+                  <li class="footer-item"><a href="#" class="footer-link">Office 365 for schools</a></li>
+                  <li class="footer-item"><a href="#" class="footer-link">Deals for studentss</a></li>
+                  <li class="footer-item" ><a href="#" class="footer-link">Microsfot Azure</a></li>
+                </ul>
+                <ul class="footer-list">
+                  <li><h3>Enterprise</h3></li>
+                  <li class="footer-item"><a href="#" class="footer-link">Azure</a></li>
+                  <li class="footer-item"><a href="#" class="footer-link">AppSource</a></li>
+                  <li class="footer-item"><a href="#" class="footer-link">Automotive</a></li>
+                  <li class="footer-item"><a href="#" class="footer-link">Government</a></li>
+                  <li  class="footer-item"><a href="#" class="footer-link">Healthcare</a></li>
+                </ul>
+                <ul class="footer-list">
+                  <li><h3>Developer</h3></li>
+                  <li class="footer-item"><a href="#" class="footer-link">Visual Studio</a></li>
+                  <li class="footer-item"><a href="#" class="footer-link">Windows Dev Center</a></li>
+                  <li class="footer-item"><a href="#" class="footer-link">Developer Network</a></li>
+                  <li class="footer-item"><a href="#"  class="footer-link">TechNet</a></li>
+                  <li class="footer-item"><a href="#" class="footer-link">Microsoft Developer</a></li>
+                </ul>
+                <ul class="footer-list">
+                  <li><h3>Company</h3></li>
+                  <li class="footer-item"><a href="#" class="footer-link">Careers</a></li>
+                  <li class="footer-item"><a href="#" class="footer-link">About Microsoft</a></li>
+                  <li class="footer-item"><a href="#" class="footer-link">Company news</a></li>
+                  <li class="footer-item"><a href="#" class="footer-link">Privacy at Microsoft</a></li>
+                  <li class="footer-item"><a href="#" class="footer-link">Inverstors</a></li>
+                </ul>
+              </div>
+           </div>
         </section>
 
     </main>
 
     <!-- Footer -->
     <footer class="footer"> 
+      <div class="container">
         <div class="footer-inner">
             <div><i class="fas fa-globe fa-2x"></i> English (United States)</div>
             <ul class="footer-inner-ul">
@@ -256,7 +262,10 @@
             <li class="footer-item"><a href="#"  class="footer-link">&copy; Microsoft 2020</a></li>
             </ul>
         </div>
-    </footer>
+      </div>
+    </footer> 
+
+    <script src="./js/script.js"></script>
 </body>
 
 </html>
